--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,19 @@
   <artifactId>Via.com</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>ProjectGladiator</name>
+  <dependencies>
+  	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>3.141.59</version>
+	</dependency>
+  	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>7.4.0</version>
+	    <scope>test</scope>
+	</dependency>
+  </dependencies>
 </project>
