--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,16 @@
 	    <version>7.4.0</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.16</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>3.16</version>
+	</dependency>
+
   </dependencies>
 </project>
