--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.16</version>
 	</dependency>
+	<dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>3.1.5</version>
+        </dependency>
 
   </dependencies>
 </project>
